@@ -9,6 +9,7 @@ pts-core: Add handler for ensuring reported system time is accurate, otherwise c
 pts-core: When scanning test suites on disk, ensure the latest test suite version is used
 pts-core: Add test-to-suite map sub-command
 pts-core: Fix for loading the result viewer JavaScript / CSS when running on a Windows host
+pts-core: For tests requiring root but not run initially as root and using monitoring data, drop the first run to ensure sudo promot doesn't skew time
 phodevi: Add amd_energy Linux driver support
 
 Phoronix Test Suite 9.6.1
